--- a/train.ipynb
+++ b/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -43,7 +43,7 @@
        "          verbose=0, warm_start=False))])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -117,7 +117,7 @@
        "'comp.os.ms-windows.misc'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -139,7 +139,7 @@
        "'misc.forsale'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -161,7 +161,7 @@
        "'rec.autos'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -183,7 +183,7 @@
        "'rec.motorcycles'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -202,16 +202,10 @@
     {
      "data": {
       "text/plain": [
-       "['models/pipeline.pickle',\n",
-       " 'models/pipeline.pickle_01.npy',\n",
-       " 'models/pipeline.pickle_02.npy',\n",
-       " 'models/pipeline.pickle_03.npy',\n",
-       " 'models/pipeline.pickle_04.npy',\n",
-       " 'models/pipeline.pickle_05.npy',\n",
-       " 'models/pipeline.pickle_06.npy']"
+       "['models/targets.pickle']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,12 +214,13 @@
     "from sklearn.externals import joblib\n",
     "!rm -rf models\n",
     "!mkdir models/\n",
-    "joblib.dump(pipeline, 'models/pipeline.pickle')"
+    "joblib.dump(pipeline, 'models/pipeline.pickle')\n",
+    "joblib.dump(targets, 'models/targets.pickle')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -240,7 +235,7 @@
        "          verbose=0, warm_start=False))])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
